# tracy_

./: CMakeLists.txt  shell.nix
cmake/: config.cmake
monitor/: CMakeLists.txt
monitor/src/: monitor.cpp
perf_wrapper/: CMakeLists.txt  ls
perf_wrapper/src/: perf.cpp
public/client/: TracyProfiler.cpp  TracyProfiler.hpp  TracySysTrace.cpp  TracySysTrace.hpp
test/: test.cpp
